Rename predefined 'total' field labels to 'total costs'

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -68,7 +68,7 @@
           </li>
           <li>
             <input type="checkbox" <%= checked?("total") %> name="report[fields[total]]" id="total" value="1" /> 
-            <label for="total">Total</label>
+            <label for="total">Total Costs</label>
           </li>
         </ol>
         <ol>
