--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -10,7 +10,7 @@
     <% if @fields.member? 'administrative' %><th class="wrap">Administrative</th><% end %>
     <% if @fields.member? 'operations' %><th class="wrap">Operations</th><% end %>
     <% if @fields.member? 'donations' %><th class="wrap">Donations</th><% end %>
-    <% if @fields.member? 'total' %><th class="wrap">Total</th><% end %>
+    <% if @fields.member? 'total' %><th class="wrap">Total Costs</th><% end %>
     <% if @fields.member? 'in_district_trips' %><th class="wrap">In District Rides</th><% end %>
     <% if @fields.member? 'out_of_district_trips' %><th class="wrap">Out of District Rides</th><% end %>
     <% if @fields.member? 'total_trips' %><th class="wrap">Total This Period</th><% end %>
