--- a/app/views/reports/_nested_rows.html.erb
+++ b/app/views/reports/_nested_rows.html.erb
@@ -5,11 +5,10 @@
       <% (@groups_size - group_fields.length).times do %>
         <td class="indent">&nbsp;</td>
       <% end %>
-      <% group = get_row(row).send(group_fields[0]) %>
-    <td class="report-item" colspan="<%= @fields.size + @group_fields.size %>"><%= group %></td>
-  
+      <td class="report-item" colspan="<%= @fields.size + @group_fields.size %>"><%= group_name(row,group_fields) %></td>
+    </tr> 
     <%= render "nested_rows", :rows => row, :group_fields => group_fields[1..-1] %>
-    <%= render 'totals', :row=>row, :group_fields=>group_fields[1..-1], :name => group %>
+    <%= render 'totals', :row=>row, :group_fields=>group_fields[1..-1], :short_name => short_group_name(row,group_fields) %>
   <% end %>
 <% else %>  
   <!-- innermost layer, render the data -->
