Add more space between link items, make font bigger

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -435,6 +435,10 @@ div#error_explanation h2 {
     font-size: 16px;
     margin: 0;
 }
+body.admin div#main li {
+  font-size: 16px;
+  padding-bottom: 15px;
+}
 
 /* forms */
 form input[type="text"],
