--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -90,13 +90,13 @@
           </li>
           <li>
             <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /> 
-            <label for="driver_volunteer_hours">Volunteer Hours</label>
+            <label for="driver_volunteer_hours">Volunteer Driver Hours</label>
           </li>
         </ol>
         <ol>
           <li>
             <input type="checkbox" <%= checked?("driver_paid_hours") %> name="report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" /> 
-            <label for="driver_paid_hours">Paid Hours</label>
+            <label for="driver_paid_hours">Paid Driver Hours</label>
           </li>
           <li>
             <input type="checkbox" <%= checked?("driver_total_hours") %> name="report[fields[driver_total_hours]]" id="driver_total_hours" value="1" /> 
