More replacements of 'Ride' with 'Trip'

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -74,11 +74,11 @@
         <ol>
           <li>
             <input type="checkbox" <%= checked?("in_district_trips") %> name="report[fields[in_district_trips]]" id="in_district_trips" value="1" /> 
-            <label for="in_district_trips">In District Rides</label>
+            <label for="in_district_trips">In District Trips</label>
           </li>
           <li>
             <input type="checkbox" <%= checked?("out_of_district_trips") %> name="report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" /> 
-            <label for="out_of_district_trips">Out of District Rides</label>
+            <label for="out_of_district_trips">Out of District Trips</label>
           </li>
           <li>
             <input type="checkbox" <%= checked?("total_last_year") %> name="report[fields[total_last_year]]" id="total_last_year" value="1" /> 
@@ -116,7 +116,7 @@
           </li>
           <li>
             <input type="checkbox" <%= checked?("miles_per_ride") %> name="report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> 
-            <label for="miles_per_ride">Miles/Ride</label>
+            <label for="miles_per_ride">Miles/Trip</label>
           </li>
         </ol>
         <ol>
