--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -11,8 +11,8 @@
     <% if @fields.member? 'operations' %><th class="wrap">Operations</th><% end %>
     <% if @fields.member? 'donations' %><th class="wrap">Donations</th><% end %>
     <% if @fields.member? 'total' %><th class="wrap">Total Costs</th><% end %>
-    <% if @fields.member? 'in_district_trips' %><th class="wrap">In District Rides</th><% end %>
-    <% if @fields.member? 'out_of_district_trips' %><th class="wrap">Out of District Rides</th><% end %>
+    <% if @fields.member? 'in_district_trips' %><th class="wrap">In District Trips</th><% end %>
+    <% if @fields.member? 'out_of_district_trips' %><th class="wrap">Out of District Trips</th><% end %>
     <% if @fields.member? 'total_trips' %><th class="wrap">Total This Period</th><% end %>
     <% if @fields.member? 'total_last_year' %><th class="wrap">Last Year's Total This Period</th><% end %>
     <% if @fields.member? 'mileage' %><th class="wrap">Mileage</th><% end %>
@@ -24,7 +24,7 @@
     <% if @fields.member? 'cost_per_trip' %><th class="wrap">Cost/Trip</th><% end %>
     <% if @fields.member? 'cost_per_mile' %><th class="wrap">Cost/Mile</th><% end %>
     <% if @fields.member? 'cost_per_hour' %><th class="wrap">Cost/Hour</th><% end %>
-    <% if @fields.member? 'miles_per_ride' %><th class="wrap">Miles/Ride</th><% end %>
+    <% if @fields.member? 'miles_per_ride' %><th class="wrap">Miles/Trip</th><% end %>
     <% if @fields.member? 'turn_downs' %><th class="wrap">Turn Downs</th><% end %>
     <% if @fields.member? 'undup_riders' %><th class="wrap">Undup Riders</th><% end %>
     <% if @fields.member? 'escort_volunteer_hours' %><th class="wrap">Escort</th><% end %>
