Move admin/ops/vm fields, fix labels

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -41,12 +41,12 @@
       <li><%= f.label :driver_hours_volunteer, "Volunteer Driver Hours" %> <%= f.text_field :driver_hours_volunteer, :tabindex=>3 %></li>
       <li><%= f.label :escort_hours_volunteer, "Escort Volunteer Hours" %> <%= f.text_field :escort_hours_volunteer ,:tabindex=>3 %></li>
       <li><%= f.label :administrative_hours_volunteer, "Admin Volunteer Hours:" %> <%= f.text_field :administrative_hours_volunteer, :tabindex=>3 %></li>
+      <li><%= f.label :funds, "Funds:" %> <%= f.text_field :funds, :tabindex=>3 %></li>
+      <li><%= f.label :donations, "Donations:" %> <%= f.text_field :donations, :tabindex=>3 %></li>
+      <li><%= f.label :agency_other, "Agency Other:" %> <%= f.text_field :agency_other, :tabindex=>3 %></li>
       <li><%= f.label :administrative, "Administrative:" %> <%= f.text_field :administrative, :tabindex=>3 %></li>
       <li><%= f.label :operations, "Operations:" %> <%= f.text_field :operations, :tabindex=>3 %></li>
       <li><%= f.label :vehicle_maint, "Vehicle Maintenance:" %> <%= f.text_field :vehicle_maint, :tabindex=>3 %></li>
-      <li><%= f.label :administrative, "Funds:" %> <%= f.text_field :funds, :tabindex=>3 %></li>
-      <li><%= f.label :operations, "Donations:" %> <%= f.text_field :donations, :tabindex=>3 %></li>
-      <li><%= f.label :vehicle_maint, "Agency Other:" %> <%= f.text_field :agency_other, :tabindex=>3 %></li>
       <li><%= f.label :complete, "Complete:" %><%= f.check_box :complete, :tabindex=>3 %></li>
     </ol>
 
