Added more summary validations

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -16,7 +16,7 @@
 
     <ol class="section summary-form-part-one">
       <li>
-        <%= f.label :allocation, "Allocation:" %> 
+        <%= f.label :allocation_id, "Allocation:" %> 
         <%= f.grouped_collection_select :allocation_id, @providers, :active_non_trip_allocations, :name, :id, :name, {:prompt => '<Select Allocation>'}, {:tabindex=>1} %>
       </li>
       <li>
