--- a/app/views/reports/show_create_active_rider.html.erb
+++ b/app/views/reports/show_create_active_rider.html.erb
@@ -2,9 +2,9 @@
   <h1>Active Rider Report</h1>
 </div>
 
-<form>
+<form class="edit_report">
   <p>
-    <label>Choose Month:</label> <%= date_select :active_rider_query, :start_date, :discard_day => true, :default => @start_date %>
+    <label>Choose Month:</label> <%= date_select :active_rider_query, :start_date, :order => [:month, :year], :default => @start_date %>
   	<input id="summary-search" type="submit" value="Search" />
   </p>
 </form>
@@ -28,20 +28,20 @@
   <tbody>
     <% for office in @customer_rows.keys.sort %>
       <tr>
-        <td class="contrast banner" colspan="9">Beaverton</td>
+        <td class="report-item" colspan="9"><%= office %></td>
       </tr>
       <% for customer_row in @customer_rows[office].values.sort {|a,b| a[:customer].name <=> b[:customer].name } %>
         <% customer = customer_row[:customer] %>
         <tr>
-          <td><%= customer.case_manager %></td>
-          <td><%= customer.date_enrolled %></td>
+          <td><%= customer_row[:case_manager] %></td>
+          <td><%= customer_row[:date_enrolled].strftime('%m-%d-%Y') %></td>
           <td><%= customer.first_name %> <%= customer.middle_initial %> <%= customer.last_name %> </td>
           <td><%= customer.prime_number %></td>
-          <td><%= customer.service_end %></td>
-          <td><%= customer.approved_rides %></td>
-          <td><%= customer_row[:billed_rides] %></td>
-          <td><%= "%.2f" % customer_row[:billable_mileage] %></td>
-          <td><%= customer_row[:mobility] %></td>
+          <td><%= customer_row[:service_end].strftime('%m-%d-%Y') %></td>
+          <td class="number"><%= customer_row[:approved_rides] %></td>
+          <td class="number"><%= customer_row[:billed_rides] %></td>
+          <td class="number"><%= "%.2f" % customer_row[:billable_mileage] %></td>
+          <td><%= customer_row[:mobility] ? 'Yes' : 'No' %></td>
         </tr>
       <% end %>
     <% end %>
