--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,6 @@
+<ul id="subnav" class="selfclear">
+  <li><%= link_to 'New Project', new_project_path, :class => :add if current_user.is_admin %></li>
+</ul>
 <div id="page-header">
   <h1>Listing projects</h1>
 </div>
@@ -24,4 +27,3 @@
 
 <%= will_paginate @projects %>
 
-<%= link_to 'New Project', new_project_path, :class => "action-bttn" if current_user.is_admin %>
