Change project labels

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,5 +5,5 @@
 <ul>
   <li><%= link_to "Allocations", :controller => "allocations" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
-  <li><%= link_to "Projects", :controller => "projects" %></li>
+  <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
 </ul>
