--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,10 +7,10 @@
 
 <table>
   <tr>
-    <th>Project Name</th>
+    <th>F.E. Project Name</th>
     <th>Funding Source</th>
     <th>Funding Sub-Source</th>
-    <th>Project Number</th>
+    <th>F.E. Project Number</th>
     <th/>
   </tr>
 
