--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -12,6 +12,7 @@
       <th><%= provider_name %> Allocations</th>
       <th>F.E. Project</th>
       <th>County</th>
+      <th></th>
     </tr>
 
     <% group.each do |allocation| %>
@@ -19,6 +20,7 @@
         <td><%= link_to allocation.name, edit_allocation_path(allocation) %></td>
         <td><%= allocation.project_name %></td>
         <td><%= allocation.county %></td>
+        <td><%= link_to "Delete", allocation_url(allocation), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this allocation?" if current_user.is_admin && !(allocation.trips.exists? || allocation.summaries.exists?) %></td>
       </tr>
     <% end %>
   <% end %>
