Shorten a report header label

--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -7,7 +7,7 @@
     <% if @fields.member? 'funds' %><th class="wrap">Funds</th><% end %>
     <% if @fields.member? 'agency_other' %><th class="wrap">Agency Other</th><% end %>
     <% if @fields.member? 'vehicle_maint' %><th class="wrap">Vehicle Maint.</th><% end %>
-    <% if @fields.member? 'administrative' %><th class="wrap">Administrative</th><% end %>
+    <% if @fields.member? 'administrative' %><th class="wrap">Admin</th><% end %>
     <% if @fields.member? 'operations' %><th class="wrap">Operations</th><% end %>
     <% if @fields.member? 'donations' %><th class="wrap">Donations</th><% end %>
     <% if @fields.member? 'total' %><th class="wrap">Total Costs</th><% end %>
