--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -108,6 +108,10 @@
             <label for="out_of_district_trips">Out of District Trips</label>
           </li>
           <li>
+            <input type="checkbox" <%= checked?("total_trips") %> name="report[fields[total_trips]]" id="total_trips" value="1" /> 
+            <label for="total_trips">Total Trips</label>
+          </li>
+          <li>
             <input type="checkbox" <%= checked?("total_last_year") %> name="report[fields[total_last_year]]" id="total_last_year" value="1" /> 
             <label for="total_last_year">Total this Period Last Year</label>
           </li>
