Optimize query for listing allocations in predefined reports edit form

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -33,7 +33,7 @@
         <h2>Individual Allocations to Include</h2>
         <select class="multi full" id="report_allocations" multiple="multiple" name="report[allocations][]">
           <%= options_for_select([['<Select None>','']],(@report.allocation_ids.blank? ? [''] : [])) %> 
-          <%= option_groups_from_collection_for_select Provider.all, :allocations, :name, :id, :name, @report.allocation_ids %>
+          <%= option_groups_from_collection_for_select Provider.includes(:allocations).all, :allocations, :name, :id, :name, @report.allocation_ids %>
         </select>
       </li>
 
