Refactor predefined reports queries, add data entry complete flag to trips, make trips and runs create new versions only when data entry is complete.

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -271,6 +271,10 @@
     </li>
 
     <li>
+      <%= f.label :complete, "Complete:" %> <%= f.check_box :complete, :tabindex=>3 %>
+    </li>
+    
+    <li>
       <%= f.label :updated_by, "Updated By:" %>
       <p class="disabled-input">
         <% if @updated_by_user.email %>
