--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -1,11 +1,11 @@
 <div id="page-header">
-  <h1>Mark Runs Complete</h1>
+  <h1>Mark Trips and Runs Complete</h1>
 </div>
 
 <%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
   <fieldset>
 
-    <p>Mark all runs complete for the following period:</p>
+    <p>Mark all trips and runs complete for the following period:</p>
 
     <ol class="section first">
       <li><%= label_tag :start_date, "Start Date:" %> <%= text_field_tag :start_date, nil, :class=>"datepicker" %></li>
