--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -66,7 +66,11 @@ thead {
 tr {
 }
 th {
-  padding: 0.7em;
+  padding: 0.1em 0.4em;
+  border: 1pt solid #000;
+}
+th.indent {
+  border: none;
 }
 tr.sub-header th {
 }
