--- a/app/views/trips/update_allocation.html.erb
+++ b/app/views/trips/update_allocation.html.erb
@@ -19,7 +19,10 @@
       </li>
       <li>
         <input id="get-count" type="submit" value="Get Trip Count" name="commit"/>
-        <span id="trip-count"><%= pluralize(@trips_count, "Completed Trip") %> Available for Transfer</span>
+        <span id="trip-count">
+          Available for Transfer:
+          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trip_count[key], "#{value} Trip") }.join(", ") %> 
+        </span>
       </li>
       
     <hr>
@@ -30,14 +33,17 @@
       </li>
       
       <li>
-        <%= label_tag :transfer_count, "Number of Trips to Transfer" %>
+        <%= label_tag :transfer_count, "Number of Completed Trips to Transfer" %>
         <%= text_field_tag :transfer_count %>
       </li>
       
       <li>
         <input id="transfer-trips" type="submit" value="Transfer Trips" name="commit"/>
         <% if @query.update_allocation? %>
-        <span id="updated-count"><%= pluralize(@trips_transferred, "Trip") %> Updated to Allocation <%= @allocation.name %></span>
+        <span id="updated-count">
+          Updated to Allocation <%= @allocation.name %>:
+          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trips_transferred[key], "#{value} Trip") }.join(", ") %> 
+        </span>
         <% end %>
       </li>
     </ol>
